tests/errors/frame_exist_55/e4.src

.IPPcode21

CREATEFRAME
PUSHFRAME
DEFVAR LF@a
POPFRAME
DEFVAR TF@b
DEFVAR LF@x
